2002-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* capplets/default-applications/gnome-default-applications-properties.glade:
	Remove translatable="yes" from icon labels. Remnant of a bug in
	libglade-convert. (Thanks to James).
	* capplets/file-types/file-types-properties.glade: Same
	* capplets/keyboard/gnome-keyboard-properties.glade: Same
	* capplets/mouse/gnome-mouse-properties.glade: Same.
	* capplets/ui-properties/gnome2-ui-properties.glade: Same
	* control-center/gnomecc.glade: Same
						
2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* root-manager/root-manager-wrap.c: Remove calls to deprecated
	functions gtk_visual_push|pop_visual().
	
2002-02-17  Gediminas Paulauskas <menesis@delfi.lt>

	* configure.in: remove deprecated GNOME_COMMON_INIT,
	GNOME_PLATFORM_GNOME_2, fix warnings macros.

2002-02-14  Richard Hestilow  <hestilow@ximian.com>

	* Committed slackware compilation patch from
	fflewddur@dropline.net.

2002-02-11  Richard Hestilow  <hestilow@ximian.com>

	* Committed instant-apply patch sans background.

2002-02-11  Richard Hestilow  <hestilow@ximian.com>

	* control-center/Makefile.am: Move splashdir to gnomecc-2.

	* Makefile.am: Remove idl from subdirs.

	* configure.in: Bump version to 0.9.3.

	* RELEASE - 0.9.3
	
2002-02-10  Richard Hestilow  <hestilow@ximian.com>

	* Added font capplet.

2002-02-07  Abel Cheung  <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): Added "ko" back, after converting
	it to UTF-8 encoding.

Thu Feb  7 00:20:38 2002  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (GETTEXT_PACKAGE): remove ko from ALL_LINGUAS as it
	seems to be broken.

2002-02-05  jacob berkman  <jacob@ximian.com>

	* configure.in (GETTEXT_PACKAGE): change to be parallel
	installable

	* control-center2.png:
	* Makefile.am (pixmap_DATA): rename to be parallel installable

2002-01-28  Richard Hestilow <hestilow@ximian.com>

	* po/POTFILES.in: Remove panel.desktop.in.in.

2002-01-28  Seth Nickell  <snickell@stanford.edu>
