@@ -24,10 +24,12 @@ fi
 changequote([,])dnl
 
 # Internationalization support
+ALL_LINGUAS="az ca cs da de el en_GB es et fi fr ga gl hr hu it ja ko lt lv ms nl nn no pl pt pt_BR ro ru sk sl sv tr uk wa zh_CN zh_TW"
+
 GETTEXT_PACKAGE=control-center-2.0
 AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
 
-ALL_LINGUAS="az ca cs da de el en_GB es et fi fr ga gl hr hu it ja ko lt lv ms nl nn no pl pt pt_BR ro ru sk sl sv tr uk wa zh_CN zh_TW"
 AM_GLIB_GNU_GETTEXT
 
 AC_CHECK_FUNCS(usleep)
@@ -125,14 +127,14 @@ else
   real_prefix=${prefix}
 fi
 
-AC_DEFINE_UNQUOTED(GNOMECC_DATA_DIR, "${real_prefix}/share/${PACKAGE}-2")
-GNOMECC_ICONS_DIR=""${datadir}/${PACKAGE}-2/icons""
+AC_DEFINE_UNQUOTED(GNOMECC_DATA_DIR, "${real_prefix}/share/${GETTEXT_PACKAGE}-2")
+GNOMECC_ICONS_DIR=""${datadir}/${GETTEXT_PACKAGE}-2/icons""
 AC_SUBST(GNOMECC_ICONS_DIR)
-GNOMECC_DESKTOP_DIR=""${datadir}/${PACKAGE}-2/capplets""
+GNOMECC_DESKTOP_DIR=""${datadir}/${GETTEXT_PACKAGE}-2/capplets""
 AC_SUBST(GNOMECC_DESKTOP_DIR)
-GNOMECC_GLADE_DIR=""${datadir}/${PACKAGE}-2/interfaces""
+GNOMECC_GLADE_DIR=""${datadir}/${GETTEXT_PACKAGE}-2/interfaces""
 AC_SUBST(GNOMECC_GLADE_DIR)
-GNOMECC_PIXMAPS_DIR=""${datadir}/${PACKAGE}-2/pixmaps""
+GNOMECC_PIXMAPS_DIR=""${datadir}/${GETTEXT_PACKAGE}-2/pixmaps""
 AC_SUBST(GNOMECC_PIXMAPS_DIR)
 dnl ==============================================
 dnl End: Define the directories 
