@@ -42,9 +42,9 @@ main(int argc, char* argv[])
 
 	int new_fd;
 
-	bindtextdomain (PACKAGE, GNOMELOCALEDIR);
-	bind_textdomain_codeset (PACKAGE, "UTF-8");
-	textdomain (PACKAGE);
+	bindtextdomain (GETTEXT_PACKAGE, GNOMELOCALEDIR);
+	bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
+	textdomain (GETTEXT_PACKAGE);
 
 	argv_fake = g_new0 (char *, 3);
 	argv_fake[0] = UH_PATH;
