@@ -1,3 +1,9 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* root-manager/root-manager-helper.c: s/PACKAGE/GETTEXT_PACKAGE/g
+	* configure.in: Add missing AC_DEFINE_UNQUOTED so that GETTEXT_PACKAGE
+	ends up in config.h. Also s/PACKAGE/GETTEXT_PACKAGE/g
+	
 2002-02-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* capplets/default-applications/gnome-default-applications-properties.glade:
